# flapi-transcode-demo

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  run.sh  run_e2e.sh
src/transcode_demo/: flapi_engine.py  jobs.py  media_scan.py  presets.py  probe.py  server.py
src/transcode_demo/flapi_env/: config.py  discovery.py  flapi_conn.py  venvs.py
src/transcode_demo/web/: index.html  mockup.html
tests/: conftest.py  test_e2e_happy_path.py  test_scan_fallback.py
